[gd_scene load_steps=6 format=3 uid="uid://csylntjtnmsra"]

[ext_resource type="Texture2D" uid="uid://cweptbnvtae2g" path="res://assets/journal.png" id="1_jmy7w"]
[ext_resource type="Script" path="res://scenes/journal.gd" id="1_snj6r"]
[ext_resource type="FontFile" uid="uid://mp1ljy5uk88x" path="res://fonts/IndieFlower-Regular.ttf" id="2_3hdhm"]
[ext_resource type="Texture2D" uid="uid://ccl0pgs17b74h" path="res://assets/sideswipe.png" id="3_m8kpi"]
[ext_resource type="AudioStream" uid="uid://b2pfnbro5vxcq" path="res://sounds/confirmation_001.ogg" id="5_4fr25"]

[node name="Journal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -252.0
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_snj6r")

[node name="BookTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_jmy7w")

[node name="Page" type="HBoxContainer" parent="."]
layout_mode = 2
offset_right = 900.0
offset_bottom = 550.0

[node name="Left" type="MarginContainer" parent="Page"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 41
theme_override_constants/margin_top = 41
theme_override_constants/margin_right = 26
theme_override_constants/margin_bottom = 65

[node name="Content" type="RichTextLabel" parent="Page/Left"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_3hdhm")
theme_override_font_sizes/normal_font_size = 20
text = "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet."
scroll_active = false
shortcut_keys_enabled = false
meta_underlined = false
hint_underlined = false
deselect_on_focus_loss_enabled = false

[node name="Right" type="MarginContainer" parent="Page"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 41
theme_override_constants/margin_right = 41
theme_override_constants/margin_bottom = 65

[node name="Content" type="RichTextLabel" parent="Page/Right"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_3hdhm")
theme_override_font_sizes/normal_font_size = 20
text = "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet."
scroll_active = false
shortcut_keys_enabled = false
meta_underlined = false
hint_underlined = false

[node name="PrevPage" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 473.0
offset_right = 537.0
offset_bottom = 985.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("3_m8kpi")
stretch_mode = 0

[node name="NextPage" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 823.0
offset_top = 473.0
offset_right = 1335.0
offset_bottom = 985.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("3_m8kpi")
stretch_mode = 0
flip_h = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_4fr25")

[connection signal="pressed" from="PrevPage" to="." method="_on_prev_page_pressed"]
[connection signal="pressed" from="NextPage" to="." method="_on_next_page_pressed"]
